Fixing card image radiuses on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -583,7 +583,7 @@ select, select option {
     height: 150px;
     overflow: hidden;
     margin: auto 0;
-    border-radius: calc(var(--radius)*2);
+    border-radius: calc(var(--radius)*1.5);
     & .card-image {
       width: 320px;
       max-width: 100%;
@@ -1323,7 +1323,7 @@ iframe[src*="bandcamp.com"] {
   }
   .card-image__link {
     min-width: 100%;
-    border-radius: 6px;
+    border-radius: calc(var(--radius)*1.5);
   }
   .card-image {
     border-radius: calc(var(--radius)*2);
